add attribute edit panel
add random name generator
add user info panel
add more drag resize box prop
add control bar
update typing

--- a/src/App.css
+++ b/src/App.css
@@ -8,22 +8,22 @@ foreignObject {
   @apply overflow-visible scale-[40];
 }
 
-input {
-  @apply border text-gray-900 m-1 p-1;
-}
-
 button {
   @apply border m-1 p-1;
 }
 
-.react-draggable {
-  cursor: move;
+.react-draggable{
   position: absolute;
+}
+
+.drag-handle {
+  cursor: move;
 }
 
 .react-resizable {
   position: absolute;
 }
+
 .react-resizable-handle {
   position: absolute;
   width: 20px;
