--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,6 @@ html {
   overflow: hidden;
 }
 
-foreignObject {
-  /* transform: scale(40);
-  overflow: visible; */
-  @apply overflow-visible scale-[40];
-}
-
-/* button {
-  @apply border m-1 p-1;
-} */
-
 .react-draggable {
   position: absolute;
 }
@@ -89,4 +79,41 @@ foreignObject {
 .react-resizable-handle-s {
   bottom: 0;
   transform: rotate(45deg);
+}
+
+.ContextMenu {
+  outline: 0;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 4px;
+  border-radius: 8px;
+}
+
+.MenuItem {
+  width: 100%;
+  display: block;
+}
+
+.MenuItem {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  text-align: left;
+  line-height: 1.5;
+  margin: 0;
+  outline: 0;
+}
+
+.MenuItem.open {
+  background: #ddd;
+}
+
+.MenuItem:focus,
+.MenuItem:not([disabled]):active {
+  background: royalblue;
+  color: white;
 }
