UI Overhual(again...
refactor
better variable naming
remove unused package

--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,10 @@ html {
   background: royalblue;
   color: white;
 }
+
+/* orverride tailwind base */
+.dock-panel-max-btn,
+::after,
+::before {
+  box-sizing: content-box;
+}
