--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,64 @@ html {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out,
-    border-color 200ms ease-in-out;
+  @apply transition-colors;
 }
 
 html.dark {
   overflow: hidden;
   background-color: #000;
+}
+
+input,
+textarea {
+  @apply transition-colors;
+  @apply text-black;
+  @apply dark:text-white;
+  @apply border;
+  @apply border-neutral-300;
+  @apply dark:border-neutral-700;
+  @apply focus:z-10;
+  @apply bg-white;
+  @apply dark:bg-neutral-900;
+  @apply dark:placeholder-[#B1B1B1];
+}
+
+div {
+  @apply dark:border-neutral-700;
+}
+
+div.panel {
+  @apply bg-white;
+  @apply dark:bg-neutral-900;
+}
+
+div.topbar {
+  @apply bg-[#108ee9];
+  @apply dark:bg-[#0a5f9c];
+}
+
+div.backdrop {
+  @apply bg-gray-500;
+  @apply bg-opacity-75;
+  @apply dark:bg-gray-800;
+  @apply dark:bg-opacity-75;
+}
+
+svg {
+  @apply text-blue-500;
+  @apply hover:bg-blue-300;
+}
+
+label {
+  @apply text-black;
+  @apply dark:text-white;
+}
+
+button {
+  @apply text-black;
+  @apply bg-white;
+  @apply dark:text-white;
+  @apply dark:bg-neutral-900;
 }
 
 /* orverride tailwind base */
