--- a/src/assets/css/rc-dock-dark.css
+++ b/src/assets/css/rc-dock-dark.css
@@ -87,7 +87,7 @@ body > .dragging-layer > div:last-child {
   margin-right: 10px;
   background: #141414;
   outline: none;
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1), border-color 150ms cubic-bezier(0.4, 0, 0.2, 1), text-decoration-color 150ms cubic-bezier(0.4, 0, 0.2, 1), fill 150ms cubic-bezier(0.4, 0, 0.2, 1), stroke 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .dock-tab.dragging {
   opacity: 0.3;
@@ -150,7 +150,7 @@ body > .dragging-layer > div:last-child {
   background: #141414;
   border-bottom: 1px solid #282828;
   padding-left: 8px;
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1), border-color 150ms cubic-bezier(0.4, 0, 0.2, 1), text-decoration-color 150ms cubic-bezier(0.4, 0, 0.2, 1), fill 150ms cubic-bezier(0.4, 0, 0.2, 1), stroke 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .dock-top .dock-content-animated {
   flex-direction: row;
@@ -347,7 +347,7 @@ body.dock-dragging iframe {
   color: rgba(255, 255, 255, 0.85);
   background: #161616;
   border: 1px solid #434343;
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1), border-color 150ms cubic-bezier(0.4, 0, 0.2, 1), text-decoration-color 150ms cubic-bezier(0.4, 0, 0.2, 1), fill 150ms cubic-bezier(0.4, 0, 0.2, 1), stroke 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .dock-panel.dragging {
   opacity: 0.3;
@@ -656,7 +656,7 @@ body.dock-dragging iframe {
   position: absolute;
   content: " ";
   border: 2px solid #444;
-  transition: background-color 200ms ease-in-out, color 200ms ease-in-out, border-color 200ms ease-in-out;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1), border-color 150ms cubic-bezier(0.4, 0, 0.2, 1), text-decoration-color 150ms cubic-bezier(0.4, 0, 0.2, 1), fill 150ms cubic-bezier(0.4, 0, 0.2, 1), stroke 150ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 1px;
   width: 9px;
   height: 9px;
