--- a/src/assets/less/index-all.less
+++ b/src/assets/less/index-all.less
@@ -1,5 +1,7 @@
-.dark {
-  @import (less) "../css/rc-dock-dark.css";
-}
+@import (multiple) "./rc-tree.less";
 
-@import (less) "../css/rc-dock.css";
+@import (multiple) "./index-light.less";
+
+.dark {
+  @import (multiple) "./index-dark.less";
+}
